--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Zakaria_Jani_circle.png" alt="Zakaria Jani Profile Picture"></td>
+      <td><img src="images/Zakaria_Jani_circle.png" alt="Zakaria Jani Profile Picture"></td>
       <td>
         <h1>Zakaria JANI</h1>
         <p><em><a href="https://www.linkedin.com/in/zakaria-jani-1a541a227/">A Master's Degree student.</a></em></p>
